# flight-tracker

./: STM_Staj Dönemi Dğerlendirme Sunumu.pptx
client/: AppPlayground.pro  AppPlayground.pro.shared
client/qml/: Main.qml  MapItem.qml
server/: .gitignore  CMakeLists.txt  binding.cc  package-lock.json  package.json  server.js
server/controllers/: flightController.js
server/core/: CMakeLists.txt  VehiclClientStub.cpp  VehiclClientStub.h  VehicleController.cpp  VehicleController.h  VehicleMessage.h  VehicleNameProvider.h  VehicleStatusProvider.h  test.cc
server/routes/: flightRoutes.js
server/www/: index.html
server/www/assets/js/: main.js
